fixing build issue

--- a/src/app/client/client.component.html
+++ b/src/app/client/client.component.html
@@ -124,7 +124,7 @@
               </div>
               <div class="col-md-4">
                 <label for="pinCode">PinCode *</label>
-                <input type="text" class="form-control underlined" pattern=".{6,6}" title="min 6,max 6 characters" name="pinCode" id="pinCode" required="true" [(ngModel)]="client.pinCode"
+                <input type="text" class="form-control underlined" pattern=".{6,6}" title="min 6,max 6 characters" name="pincode" id="pincode" required="true" [(ngModel)]="client.pincode"
                 />
                 <small>6 characters</small>
               </div>
