--- a/src/app/gen-invoice/gen-invoice.component.html
+++ b/src/app/gen-invoice/gen-invoice.component.html
@@ -21,7 +21,7 @@
           <td>{{invoice.performaId}}</td>
           <td>{{invoice.invoiceId}}</td>
           <td><input type="date" class="form-control underlined" name="invoiceDate" id="invoiceDate" required="true" [ngModel]="invoice.invoiceDate | date:'yyyy-MM-dd'"
-              (ngModelChange)="myDate = $event;loadSac()" [disabled]="invoice.type==='INVOICE'" />
+              [disabled]="invoice.type==='INVOICE'" />
           </td>
         </tr>
       </tbody>
