--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,11 +5,11 @@
                         </button>
   </div>
   <div class="header-block header-block-search">
-    
+
   </div>
   <div class="header-block header-block-nav">
     <ul class="nav-profile">
-      <li class="notifications new">
+      <!-- <li class="notifications new">
         <a href="" data-toggle="dropdown">
           <i class="fa fa-bell-o"></i>
             <sup>
@@ -65,78 +65,31 @@
             </ul>
           </footer>
         </div>
-      </li>
+      </li> -->
       <li class="notifications new">
         <a href="" data-toggle="dropdown">
-          <i class="fa fa-bell-o"></i>
-            <sup>
-             <span class="counter">8</span>
-            </sup>
+          Roles:
         </a>
         <div class="dropdown-menu notifications-dropdown-menu">
           <ul class="notifications-container">
-            <li>
-              <a href="" class="notification-item">
-                <div class="img-col">
-                  <div class="img" style="background-image: url('assets/faces/3.jpg')"></div>
-                </div>
-                <div class="body-col">
-                  <p>
-                    <span class="accent">Zack Alien</span> pushed new commit:
-                    <span class="accent">Fix page load performance issue</span>. </p>
-                </div>
-              </a>
+            <li *ngFor="let role of userRole">
+              <div class="body-col">
+                <p>
+                  <span>{{role.roleCode}}</span>
+                </p>
+              </div>
             </li>
-            <li>
-              <a href="" class="notification-item">
-                <div class="img-col">
-                  <div class="img" style="background-image: url('assets/faces/5.jpg')"></div>
-                </div>
-                <div class="body-col">
-                  <p>
-                    <span class="accent">Amaya Hatsumi</span> started new task:
-                    <span class="accent">Dashboard UI design.</span>. </p>
-                </div>
-              </a>
-            </li>
-            <li>
-              <a href="" class="notification-item">
-                <div class="img-col">
-                  <div class="img" style="background-image: url('assets/faces/8.jpg')"></div>
-                </div>
-                <div class="body-col">
-                  <p>
-                    <span class="accent">Andy Nouman</span> deployed new version of
-                    <span class="accent">NodeJS REST Api V3</span>
-                  </p>
-                </div>
-              </a>
-            </li>
-            
           </ul>
-          <footer>
-            <ul>
-              <li>
-                <a href=""> View All </a>
-              </li>
-            </ul>
-          </footer>
+
         </div>
       </li>
       <li class="profile dropdown">
         <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
-          <div class="img" style="background-image: url('https://avatars3.githubusercontent.com/u/3959008?v=3&s=40')"> </div>
-          <span class="name"> John Doe </span>
+          <div class="img" style="font-size:18px;"><i class="fa fa-user"></i> </div>
+          <span class="name"> {{user.name}} </span>
         </a>
         <div class="dropdown-menu profile-dropdown-menu" aria-labelledby="dropdownMenu1">
-          <a class="dropdown-item" href="#">
-            <i class="fa fa-user icon"></i> Profile </a>
-          <a class="dropdown-item" href="#">
-            <i class="fa fa-bell icon"></i> Notifications </a>
-          <a class="dropdown-item" href="#">
-            <i class="fa fa-gear icon"></i> Settings </a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="login.html">
+          <a class="dropdown-item" href="/logout">
             <i class="fa fa-power-off icon"></i> Logout </a>
         </div>
       </li>
