UI Modification and added invoice report generation

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<section class="section">
+<!-- <section class="section">
   <div class="row sameheight-container">
     <div class="col col-12 col-sm-12 col-md-6 col-xl-5 stats-col">
       <div class="card sameheight-item stats" data-exclude="xs">
@@ -931,3 +931,4 @@
     </div>
   </div>
 </section>
+-->
