--- a/src/app/invoice/invoice.search.component.html
+++ b/src/app/invoice/invoice.search.component.html
@@ -89,6 +89,7 @@
           <th>Invoice Amount</th>
           <th>Type</th>
           <th>Status</th>
+          <th>Print</th>
         </tr>
       </thead>
       <tbody>
@@ -97,7 +98,12 @@
             <a routerLink="/generate-invoice/{{invoice.id}}" *ngIf="invoice.invoiceId">{{invoice.invoiceId}}</a>
             <a routerLink="/generate-invoice/{{invoice.id}}" *ngIf="!invoice.invoiceId" class="btn btn-success">Generate Invoice</a>
           </td>
-          <td><a routerLink="/performaView/{{invoice.id}}" *ngIf="invoice.performaId">{{invoice.performaId}}</a></td>
+          <td>
+            <a routerLink="/performaView/{{invoice.id}}" *ngIf="invoice.performaId">{{invoice.performaId}}</a>
+            <a target="_blank" style="color:green" [href]="invoice.url">
+                <i class="fa fa-print"></i>
+              </a>
+          </td>
           <td>{{invoice.clientName}}</td>
           <td>{{invoice.performaDate | date:'yyyy-MM-dd'}}</td>
           <td>{{invoice.invoiceDate | date:'yyyy-MM-dd'}}</td>
@@ -105,6 +111,11 @@
           <td>{{invoice.totalInvoiceAmount}}</td>
           <td>{{invoice.type}}</td>
           <td>{{invoice.status}}</td>
+          <td>
+              <a target="_blank" style="color:#432fb5" [href]="invoice.url">
+                  <i class="fa fa-print"></i>
+                </a>
+            </td>
         </tr>
       </tbody>
     </table>
