--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -2,13 +2,9 @@
   <div class="sidebar-container">
     <div class="sidebar-header">
       <div class="brand">
-        <div class="logo">
-          <span class="l l1"></span>
-          <span class="l l2"></span>
-          <span class="l l3"></span>
-          <span class="l l4"></span>
-          <span class="l l5"></span>
-        </div> Seyon </div>
+        <img src="assets/g313.png"/>
+    
+      </div>
     </div>
     <nav class="menu">
       <ul class="sidebar-menu metismenu" id="sidebar-menu">
