--- a/src/app/invoice/invoice.search.component.html
+++ b/src/app/invoice/invoice.search.component.html
@@ -100,9 +100,6 @@
           </td>
           <td>
             <a routerLink="/performaView/{{invoice.id}}" *ngIf="invoice.performaId">{{invoice.performaId}}</a>
-            <a target="_blank" style="color:green" [href]="invoice.url">
-                <i class="fa fa-print"></i>
-              </a>
           </td>
           <td>{{invoice.clientName}}</td>
           <td>{{invoice.performaDate | date:'yyyy-MM-dd'}}</td>
@@ -112,9 +109,14 @@
           <td>{{invoice.type}}</td>
           <td>{{invoice.status}}</td>
           <td>
-              <a target="_blank" style="color:#432fb5" [href]="invoice.url">
-                  <i class="fa fa-print"></i>
-                </a>
+              <div class="btn-group">
+              <a target="_blank" style="color:white;background-color:#432fb5;border:white solid 1px;" class="btn btn-sm" [href]="invoice.purl">
+                  P
+              </a>
+              <a target="_blank" *ngIf="invoice.invoiceId" style="color:white;background-color:#3c3c3c;border:white solid 1px;" class="btn btn-sm" [href]="invoice.url">
+                 I
+              </a>
+              </div>
             </td>
         </tr>
       </tbody>
