--- a/src/app/gen-invoice/gen-invoice.component.html
+++ b/src/app/gen-invoice/gen-invoice.component.html
@@ -14,6 +14,7 @@
           <th>PerformA Id</th>
           <th>Invoice Id</th>
           <th>Invoice Date</th>
+          <th>Print</th>
         </tr>
       </thead>
       <tbody>
@@ -22,6 +23,11 @@
           <td>{{invoice.invoiceId}}</td>
           <td><input type="date" class="form-control underlined" name="invoiceDate" id="invoiceDate" required="true" [ngModel]="invoice.invoiceDate | date:'yyyy-MM-dd'"
               [disabled]="invoice.type==='INVOICE'" />
+          </td>
+          <td>
+            <a target="_blank" style="color:white;background-color:#432fb5" class="btn" [href]="invoice.url">
+                  <i class="fa fa-print"></i>
+             </a>
           </td>
         </tr>
       </tbody>
