modifying the UI for performa invoice

--- a/src/app/invoice/invoice.component.html
+++ b/src/app/invoice/invoice.component.html
@@ -55,7 +55,7 @@
         <th><button class="btn btn-success" (click)="addRow()" *ngIf="!(invoice.status=='CANCELED' || invoice.type=='INVOICE')">AddRow</button></th>
       </tr>
       <tr>
-        <th colspan="5">Item Description</th>
+        <th colspan="6">Item Description</th>
         <!--<th>Quantity</th>-->
         <th>Rate</th>
         <th>Amount</th>
@@ -64,7 +64,7 @@
 
         <td><button class="btn btn-sm btn-danger" (click)="deletParticulars(field.id)" *ngIf="field.id && !(invoice.status=='CANCELED' || invoice.type=='INVOICE')"><i class="fa fa-trash"></i></button></td>
 
-        <td colspan="4" WIDTH="70%">
+        <td colspan="5" WIDTH="80%">
           <textarea type="text" class="form-control" required="true" [(ngModel)]="field.itemDescription" (change)="calculateAmount(field)" [disabled]="(invoice.status=='CANCELED' || invoice.type=='INVOICE')">
           </textarea>
         </td>
@@ -89,7 +89,7 @@
         <tr *ngIf="cgstDisplay">
           <td colspan="5">
           </td>
-          <th>
+          <th style="text-align: right">
             CGST =
           </th>
           <td>{{invoice.cgstPerfomaPercent}}</td>
@@ -98,7 +98,7 @@
         <tr *ngIf="sgstDisplay">
           <td colspan="5">
           </td>
-          <th>
+          <th style="text-align: right">
             SGST =
           </th>
           <td>{{invoice.sgstPerfomaPercent}}</td>
@@ -107,7 +107,7 @@
         <tr *ngIf="igstDisplay">
           <td colspan="5">
           </td>
-          <th>
+          <th style="text-align: right">
             IGST =
           </th>
           <td>{{invoice.igstPerfomaPercent}}</td>
@@ -125,7 +125,7 @@
           <td colspan="4">
           </td>
           <td colspan="1" align="right">
-            <a target="_blank" style="color:white;background-color:#432fb5" class="btn" [href]="invoice.purl" *ngIf="invoice.purl">
+            <a target="_blank" style="color:white;background-color:#432fb5" class="btn" [href]="invoice.purl" *ngIf="invoice.purl && invoice.performaId!=''">
                   <i class="fa fa-print"></i>
                   Print View
              </a>
