--- a/src/app/client/client.component.html
+++ b/src/app/client/client.component.html
@@ -54,6 +54,8 @@
                   <option value="Company" selected>Company</option>
                   <option value="Partnership">Partnership</option>
                   <option value="Individual">Individual</option>
+                  <option value="Trust">Trust</option>
+                  <option value="LLP">LLP</option>
                 </select>
               </div>
             </div>
@@ -144,25 +146,10 @@
                 />
                 <small>min 15, max 20 characters</small>
               </div>
-              <div class="col-md-6">
-                <label for="accountingType">Accounting Type </label>
-                <input type="text" class="form-control underlined" pattern=".{3,}" title="min 3 characters" name="accountingType" id="accountingType" required="false" [(ngModel)]="client.accountingType"
-                />
-                <small>min 3 characters</small>
-              </div>
+              
             </div>
           </div>
-          <div class="form-group">
-            <div class="row">
-              <div class="col-sm-6">
-                <label for="logoImg">Logo</label>
-                <input type="file" name="file-logo" id="file-logo" (change)="changeListener($event)" />
-              </div>
-              <div class="col-sm-6">
-                <img height="75" id="logoImg" name="logoImg" src="{{client.logoImg}}" />
-              </div>
-            </div>
-          </div>
+          
           <button type="submit" class="btn bg-primary float-right"><i class="fa fa-save"></i>&nbsp;Save Client</button>
         </form>
       </div>
