--- a/src/app/gen-invoice/gen-invoice.component.html
+++ b/src/app/gen-invoice/gen-invoice.component.html
@@ -60,7 +60,7 @@
          <th colspan="5">Particulars</th>
         </tr>
         <tr valign="top">
-         <th>Item Description</th>
+         <th>Description</th>
          <th>Sac Code</th>
          <th>Quantity</th>
          <th>Rate</th>
