--- a/src/app/invoice/invoice.component.html
+++ b/src/app/invoice/invoice.component.html
@@ -55,7 +55,7 @@
         <th><button class="btn btn-success" (click)="addRow()" *ngIf="!(invoice.status=='CANCELED' || invoice.type=='INVOICE')">AddRow</button></th>
       </tr>
       <tr>
-        <th colspan="6">Item Description</th>
+        <th colspan="6">Description</th>
         <!--<th>Quantity</th>-->
         <th>Rate</th>
         <th>Amount</th>
