adding manufacturing invoice

--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -27,7 +27,10 @@
            </a>
           <ul class="sidebar-nav">
             <li>
-              <a routerLink="/invoiceNew/0" routerLinkActive="active">New ProformA</a>
+              <a routerLink="/invoiceNew/0" routerLinkActive="active">New Service ProformA</a>
+            </li>
+             <li>
+              <a routerLink="/invoiceManu/0" routerLinkActive="active">New Manufacturing ProformA</a>
             </li>
             <li>
               <a routerLink="/invoice-search"> Search </a>
