--- a/src/app/invoice/invoice.search.component.html
+++ b/src/app/invoice/invoice.search.component.html
@@ -9,6 +9,13 @@
       <div class="form-group">
         <div class="row">
           <div class="col-md-3">
+            <label for="category">Category </label>
+            <select id="category" name="category " class="form-control underlined" required="false" [(ngModel)]="searchInvoice.category">
+                  <option value="SERVICE">SERVICE</option>
+                  <option value="MANUFACTURING">MANUFACTURING</option>                  
+                </select>
+          </div>
+          <div class="col-md-3">
             <label for="name">Performa Id </label>
             <input type="text" class="form-control underlined" name="performa Id" id="performaId" required="false" [(ngModel)]="searchInvoice.performaId"
             />
@@ -25,19 +32,20 @@
                   <option value="CANCELED">CANCELED</option>                  
                 </select>
           </div>
-          <div class="col-md-3">
+         
+        </div>
+      </div>
+
+      <div class="form-group">
+        <div class="row">
+           <div class="col-md-3">
             <label for="client">Client </label>
             <select id="client" name="client " class="form-control underlined" required="false" [(ngModel)]="searchInvoice.clientId">
               <option></option>
               <option *ngFor="let cli of clients" [ngValue]="cli.id">{{cli.name}}</option>
             </select>
           </div>
-        </div>
-      </div>
-
-      <div class="form-group">
-        <div class="row">
-          <div class="col-md-4">
+          <div class="col-md-3">
             <label for="startDt">Performa/Invoice </label>
             <select id="status" name="status " class="form-control underlined" required="false" [(ngModel)]="searchInvoice.type">
                   <option></option>
@@ -45,12 +53,12 @@
                   <option value="INVOICE">INVOICE </option>               
                 </select>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-3">
             <label for="startDt">Start Date </label>
             <input type="date" class="form-control underlined" name="startDt" id="startDt" required="false" [(ngModel)]="searchInvoice.invoiceStDate"
             />
           </div>
-          <div class="col-md-4">
+          <div class="col-md-3">
             <label for="endDt">End Date</label>
             <input type="date" class="form-control underlined" name="endDt" id="endDt" required="false" [(ngModel)]="searchInvoice.invoiceEdDate"
             />
