--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -29,7 +29,9 @@
             <li>
               <a routerLink="/invoiceNew/0" routerLinkActive="active">New Service ProformA</a>
             </li>
-             
+             <li>
+              <a routerLink="/invoiceManu/0" routerLinkActive="active">New Manufacturing ProformA</a>
+            </li>
             <li>
               <a routerLink="/invoice-search"> Search </a>
             </li>
