new screen to edit and generate invoice

--- a/src/app/manufacturing-invoice/invoice.manu.success.component.html
+++ b/src/app/manufacturing-invoice/invoice.manu.success.component.html
@@ -10,7 +10,7 @@
         Proforma Invoices are created successfully , ids 
         <ol>
         <li *ngFor="let id of ids">
-          <a [routerLink]="['/manufacturingProforma', id]">{{id}}</a>  
+          <a [routerLink]="['/manufacturingInvoice', id]">{{id}}</a>  
         </li>
         </ol>
       </div>
