--- a/src/app/gen-invoice/gen-invoice.component.html
+++ b/src/app/gen-invoice/gen-invoice.component.html
@@ -22,7 +22,7 @@
           <td>{{invoice.performaId}}</td>
           <td>{{invoice.invoiceId}}</td>
           <td><input type="date" class="form-control underlined" name="invoiceDate" id="invoiceDate" required="true" [ngModel]="invoice.invoiceDate | date:'yyyy-MM-dd'"
-              [disabled]="invoice.type==='INVOICE'" />
+              (ngModelChange)="invoice.invoiceDate = $event" [value]="date | date:'yyyy-MM-dd'"  [disabled]="invoice.type==='INVOICE'" />
           </td>
           <td>
             <a target="_blank" style="color:white;background-color:#432fb5" class="btn" [href]="invoice.url">
