--- a/src/app/manufacturing-invoice/manufacturing-invoice.component.html
+++ b/src/app/manufacturing-invoice/manufacturing-invoice.component.html
@@ -1,4 +1,4 @@
-<h3>{{manufacturingInvoice.type}} Invoice (Manufacturing)</h3>
+<h3>Performa Invoice (Manufacturing)</h3>
 
 <div class="card">
   <div class="card-body">
@@ -10,13 +10,20 @@
         <option *ngFor="let cli of clients" [ngValue]="cli.id" [selected]="cli.id === selClientId">{{cli.name}}</option>
          </select>
       </div> -->
-      <div class="col-md-8">
-        
+      <div class="col-md-2">
+        <b>Performa Id</b>
+      </div>
+      <div class="col-md-2">
+        {{manufacturingInvoice.proFormaId}}
+      </div>
+      <div class="col-md-2">
+        <b>Invoice Id</b>
+      </div>
+      <div class="col-md-2">
+        {{manufacturingInvoice.invoiceId}}
       </div>
       <div class="col-md-4">
-        <button class="btn btn-info" (click)="calculateTotal()">Calculate Amount</button>
-        <button class="btn btn-info" (click)="save()">Save</button>
-        <button class="btn btn-warning" (click)="generateInvoice()">Generate Invoice</button>
+        
       </div>
     </div>
     <div class="row">
@@ -25,11 +32,10 @@
       <div class="col-md-2"><b>GSTIN : </b></div>
       <div class="col-md-3">{{selectedClient.gstin}}</div>
       <div class="col-md-1"><b>Date : </b></div>
-      <div class="col-md-3" *ngIf="manufacturingInvoice.type==='PERFORMA'">{{manufacturingInvoice.performaDate | date:"dd MMM yyyy HH:mm"}}</div>
-      <div class="col-md-3" *ngIf="manufacturingInvoice.type==='INVOICE'">{{manufacturingInvoice.invoiceDate | date:"dd MMM yyyy HH:mm"}}</div>
+      <div class="col-md-3" >{{manufacturingInvoice.performaDate | date:"dd MMM yyyy HH:mm"}}</div>
     </div>
     <div class="row">
-      <div class="col-md-1"><b>Name : </b></div>
+      <div class="col-md-1"><b>Client Name : </b></div>
       <div class="col-md-2">{{selectedClient.name}}</div>
       <div class="col-md-2"><b>Address : </b></div>
       <div class="col-md-4">
@@ -45,7 +51,7 @@
     </div>
     <table class="table">
       <tr>
-        <th colspan="8">Particulars</th>
+        <th colspan="6">Particulars</th>
       </tr>
       <tr>
         <th WIDTH="30%">Description</th>
@@ -55,9 +61,9 @@
         <th>gst</th>
         <th>Amount</th>
       </tr>
-      <tr *ngIf="manufacturingInvoice.type==='PERFORMA'">
+      <tr>
         <td WIDTH="30%">
-          <textarea type="text" class="form-control" required="true" [(ngModel)]="manufacturingInvoice.itemDescription" (change)="calculateAmount(manufacturingInvoice)">
+          <textarea type="text" class="form-control" required="true" [(ngModel)]="manufacturingInvoice.itemDescription" (change)="calculateAmount()">
           </textarea>
         </td>
         <td WIDTH="10%">
@@ -68,10 +74,10 @@
          {{manufacturingInvoice.sacCode}}
         </td>
         <td WIDTH="10%">
-          <input type="number" class="form-control" required="false" min="0" size="3" [(ngModel)]="manufacturingInvoice.quantity" (change)="calculateAmount(manufacturingInvoice)"
+          <input type="number" class="form-control" required="false" min="0" size="3" [(ngModel)]="manufacturingInvoice.quantity" (change)="calculateAmount()"
           />
         </td>
-        <td WIDTH="10%"><input type="number" class="form-control" required="false" min="0" [(ngModel)]="manufacturingInvoice.performaRate" (change)="calculateAmount(manufacturingInvoice)"
+        <td WIDTH="10%"><input type="number" class="form-control" required="false" min="0" [(ngModel)]="manufacturingInvoice.performaRate" (change)="calculateAmount()"
           />
         </td>
         <td WIDTH="10%">
@@ -84,34 +90,16 @@
         </td>
       </tr>
 
-      <tr *ngIf="manufacturingInvoice.type==='INVOICE'">
-        <td WIDTH="50%">
-          <textarea type="text" class="form-control" required="true" [(ngModel)]="manufacturingInvoice.itemDescription" (change)="calculateAmount(manufacturingInvoice)">
-          </textarea>
-        </td>
-        <td WIDTH="10%">
-          <select (change)="loadSelectedSac(manufacturingInvoice)" class="form-control underlined" [(ngModel)]="manufacturingInvoice.sacCodeId">
-        <option></option>
-        <option *ngFor="let sac of sacCodes" [ngValue]="sac.id" [selected]="sac.id === manufacturingInvoice.sacCodeId">{{sac.sacCode}}</option>
-        </select>
-        </td>
-        <td WIDTH="10%">
-          <input type="number" class="form-control" required="false" min="0" size="3" [(ngModel)]="manufacturingInvoice.quantity" (change)="calculateAmount(manufacturingInvoice)"
-          />
-        </td>
-        <td WIDTH="10%"><input type="number" class="form-control" required="false" min="0" [(ngModel)]="manufacturingInvoice.invoiceRate" (change)="calculateAmount(manufacturingInvoice)"
-          />
-        </td>
-        <td WIDTH="10%">
-          <p *ngIf="manufacturingInvoice.cgstInvoicePercent>0">cgst={{manufacturingInvoice.cgstInvoicePercent}}%, :{{manufacturingInvoice.cgstInvoice}}</p>
-          <p *ngIf="manufacturingInvoice.sgstInvoicePercent>0">sgst={{manufacturingInvoice.sgstInvoicePercent}}%, :{{manufacturingInvoice.cgstInvoice}}</p>
-          <p *ngIf="manufacturingInvoice.igstInvoicePercent>0">igst={{manufacturingInvoice.igstInvoicePercent}}%, :{{manufacturingInvoice.cgstInvoice}}</p>
-        </td>
-        <td WIDTH="10%">
-          <input type="number" readoly class="form-control" required="true" readonly [(ngModel)]="manufacturingInvoice.calculatedInvoiceAmount" />
-        </td>
-      </tr>
+     
       <tfoot>
+        <tr>
+           <td colspan="3"></td>
+          <td colspan="3" align="right">
+            <button class="btn btn-info" (click)="calculateAmount()">Calculate Amount</button>
+            <button class="btn btn-info" (click)="save()">Save</button>
+            <a class="btn btn-warning" routerLink="/generate-manu-invoice/{{manufacturingInvoice.id}}" routerLinkActive="active">View As Invoice</a>
+          </td>
+        </tr>
       </tfoot>
     </table>
   </div>
