--- a/src/app/manufacturing-invoice/manufacturing-gen-invoice.component.html
+++ b/src/app/manufacturing-invoice/manufacturing-gen-invoice.component.html
@@ -1,6 +1,6 @@
 <h3>Invoice (Manufacturing)</h3>
 
-<div class="card">
+<div class="card" *ngIf="manufacturingInvoice.id">
   <div class="card-body">
     <table width="100%">
       <thead>
@@ -29,7 +29,7 @@
   </div>
 </div>
 <br/>
-<div class="card">
+<div class="card" *ngIf="manufacturingInvoice.id">
   <div class="card-body">
     <table width="100%" border="1" style="border-collapse:collapse;border:#f2f2f2 solid 1px;">
       <thead>
@@ -101,8 +101,13 @@
   </div>
 </div>
 
-<div class="card">
+<div class="card" *ngIf="manufacturingInvoice.id">
   <div class="card-body">
     <button class="btn btn-warning float-right" (click)="save()" [disabled]="manufacturingInvoice.type==='INVOICE'">Generate Invoice</button>
   </div>
+</div>
+
+
+<div class="alert alert-danger" role="alert" *ngIf="!(manufacturingInvoice.id)" >
+   No records found
 </div>
