--- a/src/app/invoice/invoice.component.html
+++ b/src/app/invoice/invoice.component.html
@@ -117,6 +117,14 @@
           <td colspan="6">
           </td>
           <th>
+            Reimbursement =
+          </th>
+          <th><input type="number" class="form-control" required="false" min="0"  [(ngModel)]="invoice.reimbPerfomaAmount" (change)="calculateTotal()" [disabled]="(invoice.status=='CANCELED' || invoice.type=='INVOICE')"/> </th>
+        </tr>
+        <tr>
+          <td colspan="6">
+          </td>
+          <th>
             Total =
           </th>
           <th>{{invoice.totalPerfomaAmount}}</th>
@@ -125,22 +133,33 @@
           <td colspan="4">
           </td>
           <td colspan="1" align="right">
-            <a target="_blank" style="color:white;background-color:#432fb5" class="btn" [href]="invoice.purl" *ngIf="invoice.purl && invoice.performaId!=''">
-                  <i class="fa fa-print"></i>
-                  Print View
-             </a>
+           
           </td>
           <td colspan="1">
-            <button class="btn btn-secondary" (click)="calculateTotal()" [disabled]="(invoice.status=='CANCELED' || invoice.type=='INVOICE')">Calculate Total</button>
+           
           </td>
           <td colspan="1">
-            <button class="btn btn-primary" (click)="savePerformaInvoice()" [disabled]="(invoice.status=='CANCELED' || invoice.type=='INVOICE')">Save Invoice</button>
+           
           </td>
           <td colspan="1">
-            <button class="btn btn-warning" (click)="cancelInvoice()" [disabled]="(invoice.status=='CANCELED' || invoice.type=='INVOICE')">Cancel Invoice</button>
+           
           </td>
         </tr>
       </tfoot>
     </table>
+  </div>
+</div>
+
+<div class="card">
+  <div class="card-body">
+    <div class="row float-right">
+     <a target="_blank" style="color:white;background-color:#432fb5" class="btn" [href]="invoice.purl" *ngIf="invoice.purl && invoice.performaId!=''">
+            <i class="fa fa-print"></i>
+      </a>&nbsp;
+      <a routerLink="/generate-invoice/{{invoice.id}}" class="btn btn-success">View as Invoice</a>&nbsp;
+     <button class="btn btn-secondary" (click)="calculateTotal()" [disabled]="(invoice.status=='CANCELED' || invoice.type=='INVOICE')">Calculate Total</button>&nbsp;
+      <button class="btn btn-primary" (click)="savePerformaInvoice()" [disabled]="(invoice.status=='CANCELED' || invoice.type=='INVOICE')">Save Invoice</button>&nbsp;
+       <button class="btn btn-warning" (click)="cancelInvoice()" [disabled]="(invoice.status=='CANCELED' || invoice.type=='INVOICE')">Cancel Invoice</button>
+    </div>
   </div>
 </div>
