Changes to display calculated invoice and performa Amount

--- a/src/app/invoice/invoice.search.component.html
+++ b/src/app/invoice/invoice.search.component.html
@@ -115,8 +115,8 @@
           <td>{{invoice.clientName}}</td>
           <td>{{invoice.performaDate | date:'yyyy-MM-dd'}}</td>
           <td>{{invoice.invoiceDate | date:'yyyy-MM-dd'}}</td>
-          <td>{{invoice.totalPerfomaAmount}}</td>
-          <td>{{invoice.totalInvoiceAmount}}</td>
+          <td>{{invoice.calculatedPerformaAmount}}</td>
+          <td>{{invoice.calculatedInvoiceAmount}}</td>
           <td>{{invoice.type}}</td>
           <td>{{invoice.status}}</td>
           <td>
