--- a/src/app/client/client.component.html
+++ b/src/app/client/client.component.html
@@ -93,16 +93,16 @@
             <div class="row">
               <div class="col-md-6">
                 <label for="pan">PAN *</label>
-                <input type="text" class="form-control underlined" name="pan" id="pan" pattern=".{10,}" title="min 10 characters" required="true"
+                <input type="text" class="form-control underlined" name="pan" id="pan" pattern="[A-Za-z]{5}\d{4}[A-Za-z]{1}" title="Enter valid PAN No" required="true"
                   [(ngModel)]="client.pan" />
-                <small>min 10 characters</small>
+                <small>Enter valid PAN No</small>
               </div>
 
               <div class="col-md-6">
                 <label for="gstin">GSTIN *</label>
-                <input type="text" class="form-control underlined" name="gstin" id="gstin" pattern=".{15,20}" title="min 15,max 20 characters"
+                <input type="text" class="form-control underlined" name="gstin" id="gstin" pattern="^([0]{1}[1-9]{1}|[1-2]{1}[0-9]{1}|[3]{1}[0-7]{1})([a-zA-Z]{5}[0-9]{4}[a-zA-Z]{1}[1-9a-zA-Z]{1}[zZ]{1}[0-9a-zA-Z]{1})+$" title="Enter valid GST No"
                   required="true" [(ngModel)]="client.gstin" />
-                <small>min 15,Max 20 characters</small>
+                <small>Enter valid GST No</small>
               </div>
             </div>
           </div>
@@ -146,7 +146,7 @@
               </div>
             </div>
           </div>
-          <div class="form-group">
+          <!--<div class="form-group">
             <input id="checkbox" type="checkbox" [checked]="false" (change)="updateAddrs($event)"/>Shipping address is the same as billing address
             <br/>
             <label for="ship_Addr">Shipping Address</label>
@@ -164,8 +164,8 @@
 
               </div>
             </div>
-          </div>
-          <div class="form-group">
+          </div> -->
+          <!--<div class="form-group">
             <div class="row">
               <div class="col-md-4">
                 <label for="shipToAddrCity">City *</label>
@@ -186,7 +186,7 @@
                 <small>6 characters</small>
               </div>
             </div>
-          </div>
+          </div>-->
           <div class="form-group">
             <div class="row">
               <div class="col-md-6">
