--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,33 +1,7 @@
-<div class="main-wrapper">
-    <div class="app" id="app">
-        <app-header></app-header>
         <app-nav></app-nav>
-        <article class="content" style="padding: 70px 10px 85px 20px;">
+         <main class="pt-0 mx-lg-1">
+        <div class="container-fluid mt-0">
             <router-outlet></router-outlet>
-        </article>
-        <footer class="footer">
-            <div class="footer-block buttons">
-                
-            </div>
-            <div class="footer-block author">
-                <ul>
-               <!--     <li> created by
-                        <a href="https://github.com/modularcode">ModularCode</a>
-                    </li>
-                    <li>
-                        <a href="https://github.com/modularcode/modular-admin-html#get-in-touch">get in touch</a>
-                    </li>
-                    -->
-                </ul>
-            </div>
-        </footer>
-    </div>
-</div>
-<!-- Reference block for JS -->
-<div class="ref" id="ref">
-    <div class="color-primary"></div>
-    <div class="chart">
-        <div class="color-primary"></div>
-        <div class="color-secondary"></div>
-    </div>
-</div>
+        </div>
+         </main>
+        
